[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-science-integrity-benchmark"
version = "0.1.0"
description = "Benchmark core and evidence browser scaffold for life-science integrity signals."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "jang1563" }
]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
transformers = ["transformers>=4.0", "torch>=2.0"]
xgboost = ["xgboost>=2.0"]

[project.scripts]
lsib = "life_science_integrity_benchmark.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
